--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         </textarea>
         <button type="button" class="saveBtn"><i class="fas fa-save"></i>
 
-        </button>
+        </button></div>
 
       </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
 </html>
